<resources>
    <string name="app_name">Songusoid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RadioAlgo1">Test</string>
    <string name="RadioAlgo2">Debug</string>
    <string name="RadioAlgo3">Lil Big Song</string>
    <string name="RadioAlgo4">Algorithm 4</string>
    <string name="RadioAlgo5">Algorithm 5</string>
    <string name="RadioAlgo6">Algorithm 6</string>
    <string name="RadioAlgo7">Algorithm 7</string>
    <string name="RadioAlgo8">Algorithm 8</string>
    <string name="DefaultDescription">Select an algorithm to see how it works</string>
    <string name="Description1">Creates a new song containing a specific number of tones with randomized durations and randomized delays between each tone.</string>
    <string name="CreateSong">Create!</string>
    <string name="Close">Close</string>
    <string name="SaveSong">Save</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="CreateAcc">Create New Account</string>
    <string name="Play">Play</string>
    <string name="Share">Share</string>
    <string name="Replay">Replay</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="SongName">Song Name</string>
    <string-array name="HomePageChoices">
        <item>All Songs</item>
        <item>Your Songs</item>
    </string-array>
    <string-array name="ProfilePageChoices">
                <item>Friends</item>
                <item>Your Songs</item>
    </string-array>
    <string-array name="InstrumentChoices">
                <item>Piano</item>
                <item>French Horn</item>
                <item>Flute</item>
                <item>Saxophone</item>
                <item>Triangle</item>
                <item>Trombone</item>
                <item>Tuba</item>
                <item>Fart</item>
    </string-array>
</resources>
